documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef float FLOAT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

/**
*
*  PC708-1 Driver functions.
*
**/

P71W32API ERRVAL __stdcall PC708_CardClose(HCARD handleval);

P71W32API HCARD __stdcall PC708_CardOpen(ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval);

P71W32API VOID __stdcall PC708_CardReset(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardStart(HCARD handleval);

P71W32API BOOL __stdcall PC708_CardStop(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_IntInstall(LPVOID hEvent,HCARD handleval);

P71W32API ULONG __stdcall PC708_IntRd(LPUSHORT typeval,LPUSHORT infoval,HCARD handleval);

P71W32API INT __stdcall PC708_IntStatus(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_IntUninstall(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_RcvConfig(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_RcvConfigEx(ULONG rtconfigval,USHORT intfreq,HCARD handleval);

P71W32API ULONG __stdcall PC708_RcvMonBlkRd(LPUSHORT buf,ULONG bufcount,LPULONG blkcnt,HCARD handleval);

P71W32API ULONG __stdcall PC708_RcvMonBlkRdEx(LPUSHORT buf,ULONG bufcount,ULONG maxblkcnt,LPULONG blkcnt,HCARD handleval);

P71W32API USHORT __stdcall PC708_RcvMonRd(LPUSHORT buf,HCARD handleval);

P71W32API USHORT __stdcall PC708_RcvMonRdEx(LPUSHORT buf,USHORT index,HCARD handleval);

P71W32API BOOL __stdcall PC708_RcvMonStatus(HCARD handleval);

P71W32API VOID __stdcall PC708_RcvRd(LPUSHORT buf,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtConfig(USHORT framefreq,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtConfigEx(USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtConfigExx(ULONG xmtconfigval,USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);

P71W32API VOID __stdcall PC708_XmtRd(LPUSHORT buf,USHORT framenum,HCARD handleval);

P71W32API BOOL __stdcall PC708_XmtStatus(HCARD handleval);

P71W32API VOID __stdcall PC708_XmtWr(LPUSHORT buf,USHORT framenum,HCARD handleval);


P71W32API USHORT __stdcall PC708_FieldGetAngle(LPUSHORT buf);

P71W32API FLOAT __stdcall PC708_FieldGetAngleFl(LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldGetControlAccept(LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldGetData(INT binnum, LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldGetDataAccept(LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldGetFaults(LPUSHORT buf);

P71W32API INT __stdcall PC708_FieldGetGain(LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldGetLabel(LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldGetMode(LPUSHORT buf);

P71W32API INT __stdcall PC708_FieldGetRange(LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldGetTilt(LPUSHORT buf);

P71W32API FLOAT __stdcall PC708_FieldGetTiltFl(LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldPutAngle(USHORT value,LPUSHORT buf);

P71W32API FLOAT __stdcall PC708_FieldPutAngleFl(FLOAT angle,LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldPutControlAccept(USHORT value,LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldPutData(USHORT value,INT binnum, LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldPutDataAccept(USHORT value,LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldPutFaults(USHORT value,LPUSHORT buf);

P71W32API INT __stdcall PC708_FieldPutGain(INT gain,LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldPutLabel(USHORT value,LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldPutMode(USHORT value,LPUSHORT buf);

P71W32API INT __stdcall PC708_FieldPutRange(INT range,LPUSHORT buf);

P71W32API USHORT __stdcall PC708_FieldPutTilt(USHORT value,LPUSHORT buf);

P71W32API FLOAT __stdcall PC708_FieldPutTiltFl(FLOAT tilt,LPUSHORT buf);


/**
*
*  Internal functions used by the PC708-1 Driver.
*
**/

P71W32API ULONG __stdcall PC708_AddrDSP(ULONG addr);

P71W32API ULONG __stdcall PC708_AddrHost(ULONG addr);

P71W32API ERRVAL __stdcall PC708_BCConfig(ULONG configval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BCConfigEx(ULONG configval,USHORT count,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_BCConfigMsg(ULONG configval,MSGADDR msgaddr,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_BCCreateMsg(ULONG configval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedAgain(SCHNDX index,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedBranch(USHORT condition,SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedBranchDin0(SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedBranchDin1(SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedBranchEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BCSchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedCall(SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedCallCond(USHORT condition,SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedCallCondEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedEntry(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedFrame(ULONG timeval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedFrameEnd(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedFrameStart(ULONG timeval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedGap(USHORT gapval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedGoto(SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedHalt(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedInt(USHORT tagval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedIntCond(USHORT condition,USHORT tagval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedIntCondEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT tagval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedMsg(MSGADDR msgaddr,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedNop(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedPause(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedPulse(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedPulse0(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedPulse1(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedRestart(HCARD handleval);

P71W32API VOID __stdcall PC708_XmtRd(LPUSHORT buf,USHORT framenum,HCARD handleval);